# eoffice-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 05009b833f3b_add_requistion_related_tables.py  0a45251236d1_add_tables.py  258b8a7113d6_add_item_types_item_brands_table.py  2ed3dc8e1818_add_users_roles_and_role_permissions_.py  30a449fa6978_add_items_table.py
src/: .env  __init__.py  auth.py  db_queries.py  dependency.py  eoffice.db  main.py  models.py
src/db_queries/: requisitions.py  users.py
src/routers/: auth.py  requisition.py  users.py
tests/: conftest.py  test.db  test_requisition.py  test_users.py
