[project]
name = "eoffice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saiful Islam Dipak", email = "saiful.kbtel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.3.5",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.22",
]

[project.scripts]
eoffice = "eoffice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
